updates to readme and project organization

--- a/Annenberg_ML_Kayfabe_Training.ipynb
+++ b/Annenberg_ML_Kayfabe_Training.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bucket_name = 'mldatawwe2021' # <--- CHANGE THIS VARIABLE TO A UNIQUE NAME FOR YOUR BUCKET"
+    "bucket_name = 'mldatawwe' # <--- CHANGE THIS VARIABLE TO A UNIQUE NAME FOR YOUR BUCKET"
    ]
   },
   {
@@ -175,7 +175,8 @@
     }
    ],
    "source": [
-    "# Permissions need to be in place for pulling from s3 bucket link \n",
+    "# IGNORE THIS CELL - Permissions need to be in place for pulling from s3 bucket link\n",
+    "# We just do this manually in the next step\n",
     "'''try:\n",
     "  urllib.request.urlretrieve (\"https://mldatawwe.s3.amazonaws.com/romanreigns_ml_binary_v4.csv\", \"romanreigns_ml_binary_testing.csv\")\n",
     "  print('Success: downloaded bank_clean.csv.')\n",
